# Paradigm

./: .gitignore  ADVANCED_FEATURES_DEMO.md  CLEANUP_OUTDATED.md  CONTRIBUTING.md  Cargo.toml  FILE_ORGANIZATION.md  GENESIS_WORKFLOWS.md  LICENSE  NETWORK_ANALYTICS_SUMMARY.md  NETWORK_SETUP_GUIDE.md  PRODUCTION.md  PRODUCTION_LAUNCH_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  REAL_LAUNCH_GUIDE.md  api-endpoints.md  build-advanced.bat  build-genesis-only.bat  build.bat  build.sh  cargo-deny.toml  contributor-connect.bat  demo-snt-network.bat  deny.toml  docker-compose.prod.yml  genesis.bat  install-production.sh  launch-genesis.bat  launch-network.bat  launch-network.sh  launch-paradigm.bat  launch-production.bat  network-config-node1.toml  network-config-node2.toml  network-config-node3.toml  network-config-template.toml  network-status.bat  notes.txt  paradigm-network.py  (+14 more)
.cargo/: audit.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-test.yml
_data/: paradigm.db-shm  paradigm.db-wal  peers.json
_dir/: paradigm.db-shm  paradigm.db-wal  peers.json
benches/: crypto_benchmarks.rs
data/: paradigm.db-shm  paradigm.db-wal  peers.json
data/node1/: paradigm.db-shm  paradigm.db-wal  peers.json
data/node2/: paradigm.db-shm  paradigm.db-wal  peers.json
data/node3/: paradigm.db-shm  paradigm.db-wal  peers.json
docker/: Dockerfile.contributor  Dockerfile.core  Dockerfile.wallet  docker-compose.yml
docs/: ADVANCED_TOKENOMICS_IMPLEMENTATION.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_ADVANCED.md  GENESIS_CHAIN_GUIDE.md  README.md  SECURITY.md  START-NETWORK.md  TESTING_DOCUMENTATION.md  release-package.md
fresh-genesis/: paradigm.db-shm  paradigm.db-wal  peers.json
fresh-node2/: paradigm.db-shm  paradigm.db-wal  peers.json
grafana/dashboards/: paradigm_overview.json
k8s/: monitoring.yaml  namespace.yaml  paradigm-contributor.yaml  paradigm-core.yaml  paradigm-wallet.yaml
k8s/production/: backup.yaml  configmap.yaml  ingress.yaml  namespace.yaml  paradigm-api.yaml  paradigm-core.yaml  (+2 more)
paradigm-api/: Cargo.toml
paradigm-api/src/: api.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  utils.rs  websocket.rs
paradigm-api/src/routes/: accounts.rs  analytics.rs  auth.rs  blockchain.rs  cross_chain.rs  docs.rs  governance.rs  health.rs  ml_tasks.rs  mod.rs  transactions.rs  webhooks.rs  websocket.rs
paradigm-api/src/services/: analytics.rs  auth.rs  blockchain.rs  cross_chain.rs  governance.rs  ml_tasks.rs  mod.rs  webhooks.rs  websocket.rs
paradigm-api/src/websocket/: handler.rs  manager.rs  mod.rs  subscription.rs
paradigm-contributor/: Cargo.toml
paradigm-contributor/src/: gpu_compute.rs  hardware_detector.rs  main.rs  main_complex.rs  performance_monitor.rs  performance_monitor_complex.rs  task_manager.rs  task_manager_complex.rs
paradigm-core/: Cargo.toml  build.rs
paradigm-core/proto/: paradigm.proto
paradigm-core/src/: api.rs  autonomous_tasks.rs  autopool.rs  certificate_manager.rs  consensus.rs  crypto_optimization.rs  ddos_protection.rs  ephemeral_storage.rs  error.rs  fee_calculation.rs  genesis.rs  governance.rs  hsm_manager.rs  lib.rs  lib_old.rs  main.rs  memory_optimization.rs  ml_tasks.rs  ml_tasks_complex.rs  multisig_treasury.rs  network.rs  network_old.rs  network_sync.rs  parallel_ml.rs  peer_manager.rs  performance_benchmarks.rs  privacy_blockchain.rs  proof_of_work.rs  secure_networking.rs  storage.rs  transaction.rs  transaction_tester.rs  transaction_throughput.rs  transaction_validation.rs  wallet.rs  wallet_manager.rs
paradigm-core/src/ai/: adaptive_learning.rs  decision_engine.rs  mod.rs  model_federation.rs  neural_consensus.rs  predictive_governance.rs
paradigm-core/src/cross_chain/: asset_management.rs  atomic_swaps.rs  bridge_protocol.rs  governance.rs  ibc_support.rs  lightning_integration.rs  message_passing.rs  mod.rs
paradigm-core/src/interop/: atomic_swaps.rs  bridge_protocol.rs  chain_registry.rs  cross_chain_governance.rs  liquidity_pools.rs  message_passing.rs  mod.rs  relay_network.rs
paradigm-core/src/metaspace/: contribution_ledger.rs  erasure.rs  explorer.rs  fusion_forge.rs  glyph.rs  glyph_designer.rs  keeper.rs  keeper_map.rs  mod.rs  network.rs  network_animations.rs  proofs.rs  rewards.rs  sigil.rs  snt.rs  ui.rs
paradigm-core/src/performance/: auto_scaling.rs  cache_manager.rs  consensus_optimization.rs  database_optimization.rs  memory_pool.rs  metrics_collector.rs  mod.rs  network_scaling.rs  parallel_processing.rs  transaction_batching.rs
paradigm-core/src/tokenomics/: advanced_governance.rs  ai_agent_governance.rs  ai_optimizer.rs  analytics_api.rs  bridge_adapter.rs  contribution_validator.rs  core_token.rs  decay_mechanism.rs  governance_module.rs  mod.rs  model_hosting.rs  network_analytics.rs  privacy_preserving.rs  quantum_resistant.rs  reputation_ledger.rs  reward_engine.rs  staking_module.rs  temporal_evolution.rs  treasury_manager.rs
paradigm-core/tests/: ai_governance_temporal_tests.rs  ai_privacy_tests.rs  ai_privacy_tests_simple.rs  governance_tests.rs  network_analytics_tests.rs  quantum_resistant_tests.rs  test_runner.rs  tokenomics_integration_tests.rs
paradigm-sdk/: Cargo.toml
paradigm-sdk/examples/: basic_client.rs  smart_contracts.rs  wallet_operations.rs
paradigm-sdk/src/: client.rs  contracts.rs  enterprise.rs  error.rs  lib.rs  monitoring.rs  network.rs  observability.rs  privacy.rs  security.rs  telemetry.rs  threshold.rs  types.rs  utils.rs  wallet.rs  zkp.rs
paradigm-wallet/: Cargo.toml
paradigm-wallet/src/: main.rs  main_gui.rs  network_client.rs  ui.rs  wallet_manager.rs
prometheus/: prometheus.yml
scripts/: deploy-production.sh  install.sh  run_tests.bat  run_tests.sh
snt-demo/: Cargo.toml
snt-demo/src/: display.rs  main.rs  simulation.rs  snt.rs
snt-web/: README.md  package-lock.json  package.json  tsconfig.json
test-data/: paradigm.db-shm  paradigm.db-wal
tests/: fuzzing.rs  integration_tests.rs  property_tests.rs  security_tests.rs
wallets/: wallet_store.json
(+19 files in other folders)
