[workspace]
members = [
    "paradigm-core",
    "paradigm-wallet", 
    "paradigm-contributor"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.0"
sha2 = "0.10"
blake3 = "1.3"
rand = "0.8"
libp2p = { version = "0.53", features = ["tcp", "mdns", "noise", "yamux", "gossipsub", "kad", "macros", "tokio"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = { version = "0.11", features = ["json"] }
tonic = "0.10"
prost = "0.12"
async-trait = "0.1"
hex = "0.4"
dirs = "5.0"
num_cpus = "1.16"

# GUI dependencies - temporarily commented out for build compatibility
# egui = "0.24"
# eframe = { version = "0.24", default-features = false, features = ["glow"] }
# tauri = { version = "1.0", features = ["api-all"] }

# ML dependencies - temporarily commented out for build compatibility  
# candle-core = "0.3"
# candle-nn = "0.3"
# ort = "1.16"
