[package]
name = "paradigm-core"
version = "0.1.0"
edition = "2021"
description = "Core blockchain implementation for Paradigm cryptocurrency"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
libp2p = { workspace = true }
sqlx = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
tonic-build = "0.10"
