[package]
name = "paradigm-core"
version = "0.1.0"
edition = "2021"
description = "Core blockchain implementation for Paradigm cryptocurrency"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
libp2p = { workspace = true }
sqlx = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
rayon = { workspace = true }
lru = { workspace = true }
num_cpus = { workspace = true }
dirs = { workspace = true }

# Performance optimization dependencies
dashmap = "5.5"
ring = "0.17"
subtle = "2.5"
zeroize = "1.7"
sysinfo = "0.30"
tempfile = { version = "3.8", optional = true }

# Security and encryption dependencies
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
rcgen = "0.11"

[build-dependencies]
tonic-build = "0.10"
