[package]
name = "paradigm-sdk"
version = "0.1.0"
edition = "2021"
description = "Paradigm Cryptocurrency SDK - Developer tools and client libraries"
license = "MIT"
authors = ["Paradigm Team <team@paradigm.network>"]
repository = "https://github.com/paradigm-network/paradigm"
documentation = "https://docs.paradigm.network"
readme = "README.md"
keywords = ["blockchain", "cryptocurrency", "sdk", "developer-tools", "web3"]
categories = ["cryptography", "network-programming", "development-tools"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }

# Cryptography
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.0"
ring = "0.17"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "identify", "ping", "kad", "gossipsub"] }
tonic = "0.10"
prost = "0.12"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
serde_rusqlite = "0.36"

# Web and API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
hyper = "1.0"

# Utilities
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.13"
dotenvy = "0.15"

# Development tools
# Removed cargo-watch and cargo-expand due to dependency conflicts with vulnerable packages

# Additional dependencies for SDK modules
hex = "0.4"
dirs = "5.0"
toml = "0.8"

# Testing
mockall = { version = "0.11", optional = true }
wiremock = { version = "0.5", optional = true }
arbitrary = { version = "1.0", features = ["derive"], optional = true }

# Workspace dependencies
paradigm-core = { path = "../paradigm-core" }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"

[features]
default = ["client", "server", "cli", "security", "observability"]
client = []
server = []
cli = []
testing = ["mockall", "wiremock", "arbitrary"]
fuzzing = ["arbitrary"]
dev-tools = []

# Advanced security features
security = ["zkp", "threshold", "privacy", "audit"]
zkp = []           # Zero-knowledge proofs
threshold = []     # Threshold cryptography  
privacy = []       # Privacy-preserving transactions
audit = []         # Security auditing tools

# Monitoring and observability features
monitoring = []    # Metrics collection and health monitoring
telemetry = []     # Distributed tracing and structured logging
observability = ["monitoring", "telemetry"] # Comprehensive observability platform

# Enterprise features
enterprise = ["security", "audit"]
compliance = ["enterprise"]

all = ["client", "server", "cli", "testing", "dev-tools", "security", "enterprise"]

# Binary targets temporarily disabled due to missing source files
# [[bin]]
# name = "paradigm-cli"
# path = "src/bin/cli.rs"
# required-features = ["cli"]

# [[bin]]
# name = "paradigm-server"
# path = "src/bin/server.rs"
# required-features = ["server"]

[[example]]
name = "basic_client"
path = "examples/basic_client.rs"
required-features = ["client"]

[[example]]
name = "wallet_operations"
path = "examples/wallet_operations.rs"
required-features = ["client"]

[[example]]
name = "smart_contracts"
path = "examples/smart_contracts.rs"
required-features = ["client"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]