[package]
name = "snt-demo"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
comfy-table = "7.0"
inquire = "0.7"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "snt-demo"
path = "src/main.rs"